cabal-version:       >= 1.10

name:                dagdbot
version:             1
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Rick Elrod
maintainer:          rick@elrod.me
copyright:           (c) 2019 Rick Elrod
-- category:
build-type:          Simple

executable dagdbot
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , http-client
                     , http-client-tls
                     , mysql
                     , mysql-simple
                     , simpleirc
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
